fix : show popup button on mobile size screen.

--- a/css/style-features.css
+++ b/css/style-features.css
@@ -328,6 +328,9 @@ body {
 
 @media only screen and (max-width: 425px) {
   .hide-button-on-mobile {
+    display: block;
+  }
+  .speech-bubble {
     display: none;
   }
 }
