--- a/css/style-home.css
+++ b/css/style-home.css
@@ -566,6 +566,9 @@ body {
 
 @media only screen and (max-width: 425px) {
   .hide-button-on-mobile {
+    display: block;
+  }
+  .speech-bubble {
     display: none;
   }
 }
