--- a/css/style-pricing.css
+++ b/css/style-pricing.css
@@ -336,6 +336,9 @@ body {
 
 @media only screen and (max-width: 425px) {
   .hide-button-on-mobile {
+    display: block;
+  }
+  .speech-bubble {
     display: none;
   }
 }
