--- a/css/style.css
+++ b/css/style.css
@@ -491,6 +491,9 @@ strong {
 
 @media only screen and (max-width: 425px) {
   .hide-button-on-mobile {
+    display: block;
+  }
+  .speech-bubble {
     display: none;
   }
 }
